# building_elastic

./: .gitignore  README.md  examples.py  pyproject.toml
building_elastic/: load.py  naive_search.py  run.py  value_objects.py
